--- a/public/src/styles/elements/_icons.scss
+++ b/public/src/styles/elements/_icons.scss
@@ -1,11 +1,12 @@
-$icon-qq: "\e910";
-$icon-menu: "\e90e";
-$icon-magnifying-glass: "\e90c";
-$icon-sticky-note: "\e901";
+$icon-qq: "\e907";
+$icon-menu: "\e901";
+$icon-magnifying-glass: "\e906";
+$icon-sticky-note: "\e902";
 $icon-note-checked: "\e900";
-$icon-circle-with-plus: "\e903";
-$icon-check: "\e902";
+$icon-circle-with-plus: "\e904";
+$icon-check: "\e903";
 $icon-bubble: "\e96b";
-$icon-cross: "\e906";
+$icon-cross: "\e905";
 $icon-cancel-circle: "\ea0d";
 $icon-cog: "\e908";
+$icon-log-out: "\e909";
