--- a/templates/todo/twigBlocks/main-navigation-sidebar.html.twig
+++ b/templates/todo/twigBlocks/main-navigation-sidebar.html.twig
@@ -21,10 +21,10 @@
             <li class="done-todos">
                 <a href="{{ path('done_todos') }}">Done Todos</a>
             </li>
-            <li>
+            <li class="settings-left">
                 <button class="button" data-settings-button>Settings</button>
             </li>
-            <li>
+            <li class="logout">
                 <a href="{{ path('todo_logout') }}" class="logout">Logout</a>
             </li>
         </ul>
