--- a/public/src/styles/components/_login.scss
+++ b/public/src/styles/components/_login.scss
@@ -126,7 +126,7 @@
                             bottom: rem-calc(10);
                         }
                     }
-                    .button {
+                    .button{
                         @include default-button-states();
                         font: {
                             size: rem-calc(20);
@@ -134,13 +134,21 @@
                         background: {
                             image: linear-gradient(90deg, #0162c8, #55e7fc);
                         }
-                        padding: rem-calc(10) rem-calc(40);
+                        padding: rem-calc(6) rem-calc(40);
                         border: {
                             radius: rem-calc(50);
                         }
                         color: $login-button-color;
                         cursor: pointer;
                         position: relative;
+                    }
+                    .button-register {
+                        margin: {
+                            right: rem-calc(12);
+                        }
+                        background: {
+                            image: linear-gradient(90deg, #EF3B36, #FFFFFF);
+                        }
                     }
                 }
             }
