--- a/templates/todo/login/index.html.twig
+++ b/templates/todo/login/index.html.twig
@@ -19,6 +19,7 @@
     </div>
     <div class="submitting-container">
         <a href="#" class="forgotten-password">Forgotten Password?</a>
+        <a href="{{ path('todo_register') }}" class="button button-register">Register</a>
         <button class="button" type="submit">Login</button>
     </div>
     <input type="hidden" name="_csrf_token" value="{{  csrf_token('authenticate') }}">
