--- a/templates/todo/register/base.html.twig
+++ b/templates/todo/register/base.html.twig
@@ -11,6 +11,8 @@
     <meta property="og:description" content="This App gonna be your best friend in evey day journey" >
     <meta property="og:locale" content="pl_PL" >
     <meta property="og:locale:alternate" content="en_GB" >
+    <link rel="icon" type="image/png" href="{{ asset('favicon.png') }}">
+    <link rel="apple-touch-icon" href="{{ asset('favicon.png') }}">
 
     <title>{% block title %}Todo App{% endblock %}</title>
 
